Add trace event to debug janks at startup

The number of janks caused by mojo handlers have increased recently.
The suspected feature is feed network request. Add a trace event to
debug if this is the case.

BUG=916791
R=fgorski@chromium.org

Change-Id: I4daf735d1fc90d9488324c83f7af7b5f4990b833
Reviewed-on: https://chromium-review.googlesource.com/c/1388031
Reviewed-by: Filip Gorski <fgorski@chromium.org>
Commit-Queue: ssid <ssid@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618559}
Former-commit-id: 23f9b2c08f567cd8b3ab8c67bd342e2c17e271a8